syntax = "proto3";

package pb;

option go_package = "github.com/rajan-marasini/ecom-microservice/account/pb";

message Account {
  string id = 1;
  string name = 2;
}

message PostAccountRequest {
  string name = 1;
}

message PostAccountResponse {
  Account account = 1;
}

message GetAccountByIDRequest {
  string id =1 ;
}

message GetAccountByIDResponse {
  Account account = 1;
}

message GetAccountsRequest {
  uint64 skip = 1;
  uint64 take = 2;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

service AccountService {
  rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {

  }

  rpc GetAccountByID (GetAccountByIDRequest) returns (GetAccountByIDResponse) {

  }

  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse) {

  }
}